Mse en forme des vues (très basique) et écriture d'un méthode Repository pour Element.

--- a/src/Muzich/IndexBundle/Resources/views/Index/index.html.twig
+++ b/src/Muzich/IndexBundle/Resources/views/Index/index.html.twig
@@ -1,7 +1,8 @@
 {% extends "MuzichCoreBundle::layout.html.twig" %}
 
+{% block title %}Hello {{ bux.username }}{% endblock %}
+
 {% block content %}
     <h1>Hello {{ bux.username }}!</h1>
 {% endblock %}
 
-{% set code = code(_self) %}
