--- a/src/Muzich/CoreBundle/Resources/views/layout.html.twig
+++ b/src/Muzich/CoreBundle/Resources/views/layout.html.twig
@@ -1,7 +1,28 @@
-<div id="connexion">
+<!-- XHTML 1.0 - Transitional -->
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
+	"http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="fr" lang="fr">
+<head>
+	<title>{% block title %}{% endblock %}</title>
+	
+	<meta http-equiv="content-type" content="text/html;charset=utf-8" />
+	<meta http-equiv="Content-Style-Type" content="text/css" />
+	<meta name="description" content="" />
+	<meta name="keywords" content="" />
+	<meta name="author" content="" />
+	
+	{#<link href="{{ asset('images/favicon.ico') }}" rel="icon" type="image/x-icon" />#}
+	{#<link href="{{ asset('css/main.css') }}" rel="stylesheet" media="screen" type="text/css" />#}
+	{#<script src="{{ asset('js/main.js') }}" type="text/javascript"></script>#}
+</head>
+<body>
+	
+  <div id="connexion">
     {% include "MuzichUserBundle::connexion.html.twig" %}
-</div>
+  </div>
+  
+  {% block content %}{% endblock %}
+  
+</body>
+</html>
 
-{% block content %}
-    {% block fos_user_content %}{% endblock %}
-{% endblock %}
