--- a/src/Muzich/CoreBundle/Resources/views/layout.html.twig
+++ b/src/Muzich/CoreBundle/Resources/views/layout.html.twig
@@ -11,8 +11,9 @@
 	<meta name="keywords" content="" />
 	<meta name="author" content="" />
 	
-	{#<link href="{{ asset('images/favicon.ico') }}" rel="icon" type="image/x-icon" />#}
-	{#<link href="{{ asset('css/main.css') }}" rel="stylesheet" media="screen" type="text/css" />#}
+	<link href="{{ asset('favicon.ico') }}" rel="icon" type="image/x-icon" />
+	<link href="{{ asset('bundles/muzichcore/css/base.css') }}" rel="stylesheet" media="screen" type="text/css" />
+	<link href="{{ asset('bundles/muzichcore/css/main.css') }}" rel="stylesheet" media="screen" type="text/css" />
 	{#<script src="{{ asset('js/main.js') }}" type="text/javascript"></script>#}
 </head>
 <body>
