--- a/src/Muzich/IndexBundle/Resources/views/Index/index.html.twig
+++ b/src/Muzich/IndexBundle/Resources/views/Index/index.html.twig
@@ -1,8 +1,42 @@
 {% extends "MuzichCoreBundle::layout.html.twig" %}
 
-{% block title %}Hello {{ bux.username }}{% endblock %}
+{% block title %}Hello{% endblock %}
 
 {% block content %}
-    <h1>Hello {{ bux.username }}!</h1>
+    <h1>Hello</h1>
+    
+    <img src="/favicon.ico" />
+    
+    <div>
+      {% if error %}
+          <div>{{ error }}</div>
+      {% endif %}
+
+      <form action="{{ path("fos_user_security_check") }}" method="post">
+          <label for="username">{{ 'security.login.username'|trans({}, 'FOSUserBundle') }}</label>
+          <input type="text" id="username" name="_username" value="{{ last_username }}" />
+
+          <label for="password">{{ 'security.login.password'|trans({}, 'FOSUserBundle') }}</label>
+          <input type="password" id="password" name="_password" />
+
+          <input type="checkbox" id="remember_me" name="_remember_me" value="on" />
+          <label for="remember_me">{{ 'security.login.remember_me'|trans({}, 'FOSUserBundle') }}</label>
+
+          <input type="submit" id="_submit" name="_submit" value="{{ 'security.login.submit'|trans({}, 'FOSUserBundle') }}" />
+      </form>
+    </div>
+    
+    <div>
+      <form action="{{ path('fos_user_registration_register') }}" {{ form_enctype(form) }} 
+        method="POST" 
+        class="fos_user_registration_register"
+      >
+        {{ form_widget(form) }}
+        <div>
+            <input type="submit" value="{{ 'registration.submit'|trans({}, 'FOSUserBundle') }}" />
+        </div>
+    </form>
+    </div>
+    
 {% endblock %}
 
