--- a/src/Muzich/IndexBundle/Resources/views/Index/index.html.twig
+++ b/src/Muzich/IndexBundle/Resources/views/Index/index.html.twig
@@ -7,36 +7,10 @@
     
     <img src="/favicon.ico" />
     
-    <div>
-      {% if error %}
-          <div>{{ error }}</div>
-      {% endif %}
-
-      <form action="{{ path("fos_user_security_check") }}" method="post">
-          <label for="username">{{ 'security.login.username'|trans({}, 'FOSUserBundle') }}</label>
-          <input type="text" id="username" name="_username" value="{{ last_username }}" />
-
-          <label for="password">{{ 'security.login.password'|trans({}, 'FOSUserBundle') }}</label>
-          <input type="password" id="password" name="_password" />
-
-          <input type="checkbox" id="remember_me" name="_remember_me" value="on" />
-          <label for="remember_me">{{ 'security.login.remember_me'|trans({}, 'FOSUserBundle') }}</label>
-
-          <input type="submit" id="_submit" name="_submit" value="{{ 'security.login.submit'|trans({}, 'FOSUserBundle') }}" />
-      </form>
-    </div>
+    {% include "MuzichUserBundle:Security:login.html.twig" %}
+    {% include "MuzichUserBundle:Registration:register.html.twig" %}
     
-    <div>
-      <form action="{{ path('fos_user_registration_register') }}" {{ form_enctype(form) }} 
-        method="POST" 
-        class="fos_user_registration_register"
-      >
-        {{ form_widget(form) }}
-        <div>
-            <input type="submit" value="{{ 'registration.submit'|trans({}, 'FOSUserBundle') }}" />
-        </div>
-    </form>
-    </div>
+    
     
 {% endblock %}
 
