--- a/src/Muzich/CoreBundle/Resources/views/layout.html.twig
+++ b/src/Muzich/CoreBundle/Resources/views/layout.html.twig
@@ -22,7 +22,7 @@
     {% include "MuzichUserBundle::connexion.html.twig" %}
   </div>
   
-  {% block content %}{% endblock %}
+  {% block main_content %}{% endblock %}
   
 </body>
 </html>
