Restructuration des templates + Préparation du home + gestion CSS par bundle.

--- a/src/Muzich/HomeBundle/Resources/views/Home/index.html.twig
+++ b/src/Muzich/HomeBundle/Resources/views/Home/index.html.twig
@@ -1,2 +1,10 @@
-{% extends "MuzichCoreBundle::layout.html.twig" %}
+{% extends "MuzichHomeBundle::layout.html.twig" %}
 
+{% block title %}Réseau{% endblock %}
+
+{% block content %}
+    
+  Salut {{ user.username }}
+    
+    
+{% endblock %}
