--- a/src/Muzich/IndexBundle/Resources/views/Index/index.html.twig
+++ b/src/Muzich/IndexBundle/Resources/views/Index/index.html.twig
@@ -1,6 +1,6 @@
 {% extends "MuzichIndexBundle::layout.html.twig" %}
 
-{% block title %}Hello{% endblock %}
+{% block title %}Découvrez et partagez{% endblock %}
 
 {% block content %}
     
