--- a/src/Muzich/CoreBundle/Resources/views/layout.html.twig
+++ b/src/Muzich/CoreBundle/Resources/views/layout.html.twig
@@ -3,7 +3,7 @@
 	"http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="fr" lang="fr">
 <head>
-	<title>{% block title %}{% endblock %}</title>
+	<title>Muzi.ch - {% block title %}{% endblock %}</title>
 	
 	<meta http-equiv="content-type" content="text/html;charset=utf-8" />
 	<meta http-equiv="Content-Style-Type" content="text/css" />
@@ -14,7 +14,9 @@
 	<link href="{{ asset('favicon.ico') }}" rel="icon" type="image/x-icon" />
 	<link href="{{ asset('bundles/muzichcore/css/base.css') }}" rel="stylesheet" media="screen" type="text/css" />
 	<link href="{{ asset('bundles/muzichcore/css/main.css') }}" rel="stylesheet" media="screen" type="text/css" />
+  {% block css %}{% endblock %}
 	{#<script src="{{ asset('js/main.js') }}" type="text/javascript"></script>#}
+  {% block js %}{% endblock %}
 </head>
 <body>
 	
