Mise en place et test de l'objet de paramétrage de la recherche d'element, et sa requete (debut).

--- a/src/Muzich/HomeBundle/Resources/views/Home/index.html.twig
+++ b/src/Muzich/HomeBundle/Resources/views/Home/index.html.twig
@@ -4,7 +4,22 @@
 
 {% block content %}
     
-  Salut {{ user.username }}
+<ul>
+  {% for element in elements %} 
+    <li>
+      {{element.name}}
+        
+        <ul>
+          {% for tag in element.tags %} 
+            <li>
+              {{tag.name}}
+            </li>
+          {% endfor %} 
+        </ul>
+        
+    </li>
+  {% endfor %} 
+</ul>
     
     
 {% endblock %}
