A la méthode getUser() dans le Controlleur surchargé (plus propre).

--- a/src/Muzich/HomeBundle/Resources/views/Home/index.html.twig
+++ b/src/Muzich/HomeBundle/Resources/views/Home/index.html.twig
@@ -8,7 +8,7 @@
   {% for element in elements %} 
     <li>
       {{element.name}} ({{element.owner.username}})
-        
+        <a href="{{element.url}}" target="_blank">link</a>
         <ul>
           {% for tag in element.tags %} 
             <li>
