--- a/src/Muzich/HomeBundle/Resources/views/Home/index.html.twig
+++ b/src/Muzich/HomeBundle/Resources/views/Home/index.html.twig
@@ -4,22 +4,6 @@
 
 {% block content %}
     
-<ul>
-  {% for element in elements %} 
-    <li>
-      {{element.name}} ({{element.owner.username}})
-        <a href="{{element.url}}" target="_blank">link</a>
-        <ul>
-          {% for tag in element.tags %} 
-            <li>
-              {{tag.name}}
-            </li>
-          {% endfor %} 
-        </ul>
-        
-    </li>
-  {% endfor %} 
-</ul>
-    
+  {% render "MuzichCoreBundle:Search:searchelements" with { 'search': search } %}
     
 {% endblock %}
