--- a/src/Muzich/HomeBundle/Resources/views/Home/index.html.twig
+++ b/src/Muzich/HomeBundle/Resources/views/Home/index.html.twig
@@ -4,6 +4,8 @@
 
 {% block content %}
     
-  {% render "MuzichCoreBundle:Search:searchelements" with { 'search': search } %}
+  {% include "MuzichCoreBundle:SearchElement:form.html.twig" %}
+
+  {% render "MuzichCoreBundle:Search:doSearchElements" with { 'search': search_object } %}
     
 {% endblock %}
