--- a/src/Muzich/CoreBundle/Resources/views/SearchElement/default.html.twig
+++ b/src/Muzich/CoreBundle/Resources/views/SearchElement/default.html.twig
@@ -1,12 +1,15 @@
 <ul>
   {% for element in elements %} 
     <li>
-      {{element.name}} ({{element.owner.username}})
-        <a href="{{element.url}}" target="_blank">link</a>
+      {% if element.group %}
+        <b>({{ element.group.name }})</b>
+      {% endif %}
+      {{ element.name }} ({{ element.owner.username }})
+        <a href="{{ element.url }}" target="_blank">link</a>
         <ul>
           {% for tag in element.tags %} 
             <li>
-              {{tag.name}}
+              {{ tag.name }}
             </li>
           {% endfor %} 
         </ul>
