--- a/src/Muzich/MynetworkBundle/Resources/views/Mynetwork/index.html.twig
+++ b/src/Muzich/MynetworkBundle/Resources/views/Mynetwork/index.html.twig
@@ -3,5 +3,38 @@
 {% block title %}Mon réseau{% endblock %}
 
 {% block content %}
-        
+  
+  {% if followeds_users %}
+    <b>Utilisateurs</b>
+    <ul>
+    {% for user in followeds_users %} 
+      <li>
+        {{ user.username }}
+      </li>
+    {% endfor %}
+    </ul>
+  {% endif %}
+  
+  {% if followeds_groups %}
+    <b>Groupes</b>
+    <ul>
+    {% for group in followeds_groups %} 
+      <li>
+        {{ group.name }}
+      </li>
+    {% endfor %}
+    </ul>
+  {% endif %}
+  
+  {% if followers_users %}
+    <b>Vous êtes suivis par</b>
+    <ul>
+    {% for user in followers_users %} 
+      <li>
+        {{ user.username }}
+      </li>
+    {% endfor %}
+    </ul>
+  {% endif %}
+
 {% endblock %}
