Liens entre my-network et my-network/search

--- a/src/Muzich/MynetworkBundle/Resources/views/Mynetwork/index.html.twig
+++ b/src/Muzich/MynetworkBundle/Resources/views/Mynetwork/index.html.twig
@@ -3,6 +3,12 @@
 {% block title %}Mon réseau{% endblock %}
 
 {% block content %}
+
+  <p>
+    <a href="{{ path('mynetwork_search') }}" >
+      Rechercher
+    </a>
+  </p>
   
   {% if followeds_users %}
     <b>Utilisateurs</b>
