--- a/src/Muzich/CoreBundle/Resources/views/layout.html.twig
+++ b/src/Muzich/CoreBundle/Resources/views/layout.html.twig
@@ -15,7 +15,7 @@
 	<link href="{{ asset('bundles/muzichcore/css/base.css') }}" rel="stylesheet" media="screen" type="text/css" />
 	<link href="{{ asset('bundles/muzichcore/css/main.css') }}" rel="stylesheet" media="screen" type="text/css" />
   {% block css %}{% endblock %}
-	{#<script src="{{ asset('js/main.js') }}" type="text/javascript"></script>#}
+	<script src="{{ asset('bundles/muzichcore/js/jquery-1.6.4.min.js') }}" type="text/javascript"></script>
   {% block js %}{% endblock %}
 </head>
 <body>
