--- a/src/Muzich/MynetworkBundle/Resources/views/Mynetwork/search.html.twig
+++ b/src/Muzich/MynetworkBundle/Resources/views/Mynetwork/search.html.twig
@@ -10,6 +10,53 @@
     </a>
   </p>
   
+  <b>Rechercher des utilisateurs et des groupes</b>
   
+  <form action="{{ path('mynetwork_search') }}" method="post" {{ form_enctype(search_form) }}>
+    
+    {{ form_errors(search_form) }}
+
+    {{ form_row(search_form.string) }}
+
+    {{ form_rest(search_form) }}
+
+    <input type="submit" />
+  </form>
+  
+  {% if results.users|length or results.groups|length %}
+  
+    {% if results.users %}
+
+      <b>Utilisateurs</b>
+      
+      <ul>
+      {% for user in results.users %} 
+        <li>
+          {{ user.username }}
+        </li>
+      {% endfor %}
+      </ul>
+
+    {% endif %}
+  
+    {% if results.groups %}
+
+      <b>Groupes</b>
+      
+      <ul>
+      {% for group in results.groups %} 
+        <li>
+          {{ group.name }}
+        </li>
+      {% endfor %}
+      </ul>
+
+    {% endif %}
+  
+  {% elseif search_done %}
+      
+      <p>Il n'y a aucun résultat a votre recherche</p>
+      
+  {% endif %}
 
 {% endblock %}
