Affichage des Elements sur les pages 'show'

--- a/src/Muzich/HomeBundle/Resources/views/Show/showUser.html.twig
+++ b/src/Muzich/HomeBundle/Resources/views/Show/showUser.html.twig
@@ -5,5 +5,7 @@
 {% block content %}
     
   <b>{{ viewed_user.name }}</b>
+  
+  {% include "MuzichCoreBundle:SearchElement:default.html.twig" %}
     
 {% endblock %}
