Couche CSS de base

--- a/src/Muzich/CoreBundle/Resources/views/layout.html.twig
+++ b/src/Muzich/CoreBundle/Resources/views/layout.html.twig
@@ -20,11 +20,11 @@
 </head>
 <body>
 	
-  <div id="connexion">
-    {% include "MuzichUserBundle::connexion.html.twig" %}
-  </div>
+  {% include "MuzichUserBundle::connexion.html.twig" %}
   
-  {% block main_content %}{% endblock %}
+  <div id="container">
+    {% block main_content %}{% endblock %}
+  </div>
   
 </body>
 </html>
