--- a/src/Muzich/HomeBundle/Resources/views/Show/showGroup.html.twig
+++ b/src/Muzich/HomeBundle/Resources/views/Show/showGroup.html.twig
@@ -4,7 +4,7 @@
 
 {% block content %}
     
-  <b>{{ group.name }}</b>
+  <h2>{{ group.name }}</h2>
   
   {% include "MuzichCoreBundle:SearchElement:default.html.twig" %}
     
