--- a/src/Muzich/HomeBundle/Resources/views/Show/showUser.html.twig
+++ b/src/Muzich/HomeBundle/Resources/views/Show/showUser.html.twig
@@ -4,7 +4,7 @@
 
 {% block content %}
     
-  <b>{{ viewed_user.name }}</b>
+  <h2>{{ viewed_user.name }}</h2>
   
   {% include "MuzichCoreBundle:SearchElement:default.html.twig" %}
     
