--- a/web/bundles/muzichcore/css/main.css
+++ b/web/bundles/muzichcore/css/main.css
@@ -1,1 +1,34 @@
 
+#container
+{
+  width: 920px;
+  margin-top: 45px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 45px;
+  
+  padding: 10px;
+  background-color: white;
+  border: 0px solid #d5d5d5;
+  border-radius: 7px;
+  -moz-border-radius: 7px;
+  -webkit-border-radius: 7px;
+}
+
+#container h1
+{
+  
+}
+#container h2
+{
+  margin-top: 5px;
+  margin-bottom: 5px;
+}
+#container h3
+{
+  
+}
+#container h4
+{
+  
+}
