Ajout des onglets de navigation Le réseau / Mon réseau

--- a/src/Muzich/HomeBundle/Resources/views/layout.html.twig
+++ b/src/Muzich/HomeBundle/Resources/views/layout.html.twig
@@ -5,5 +5,9 @@
 {% endblock %}
 
 {% block main_content %}
+  
+    {% include "MuzichCoreBundle:Menu:containerMenu.html.twig" with { 'active': 'public' } %}
+  
     {% block content %}{% endblock %}
+  
 {% endblock %}
