--- a/src/Muzich/MynetworkBundle/Resources/views/Mynetwork/search.html.twig
+++ b/src/Muzich/MynetworkBundle/Resources/views/Mynetwork/search.html.twig
@@ -32,7 +32,7 @@
       <ul>
       {% for user in results.users %} 
         <li>
-          {{ user.username }}
+          <a href="{{ path('show_user', { 'slug': user.slug }) }}">{{ user.username }}</a>
         </li>
       {% endfor %}
       </ul>
@@ -46,7 +46,7 @@
       <ul>
       {% for group in results.groups %} 
         <li>
-          {{ group.name }}
+          <a href="{{ path('show_group', { 'slug': group.slug }) }}">{{ group.name }}</a>
         </li>
       {% endfor %}
       </ul>
