--- a/web/bundles/muzichcore/css/main.css
+++ b/web/bundles/muzichcore/css/main.css
@@ -13,6 +13,10 @@
   border-radius: 7px;
   -moz-border-radius: 7px;
   -webkit-border-radius: 7px;
+  
+  -webkit-box-shadow: #666 0px 2px 3px;
+  -moz-box-shadow: #666 0px 2px 3px;
+  box-shadow: #666 0px 2px 3px;
 }
 
 #container h1
@@ -31,4 +35,43 @@
 #container h4
 {
   
+}
+
+#container #top-tabs
+{
+  float: left;
+  list-style: none outside none;
+  margin: -36px 16px 0 -6px;
+  padding: 0;
+}
+
+#container #top-tabs li
+{
+  float: left;
+  margin-left: 0px;
+  
+  padding-top: 3px;
+  padding-left: 5px;
+  padding-right: 5px;
+  padding-bottom: 3px;
+  
+  background-color: #e9e9e9;
+  
+  border-top: 1px solid #d5d5d5;
+  border-left: 1px solid #d5d5d5;
+  border-right: 1px solid #d5d5d5;
+  border-radius: 5px 5px 0px 0px;
+  -moz-border-radius: 5px 5px 0px 0px;
+  -webkit-border-radius: 5px 5px 0px 0px;
+  
+}
+
+#container #top-tabs li.active
+{
+  background-color: white;
+}
+
+#container #top-tabs li a
+{
+  text-decoration: none;
 }
