Style pour le lien Rechercher/retour de myNetwork

--- a/src/Muzich/MynetworkBundle/Resources/views/Mynetwork/index.html.twig
+++ b/src/Muzich/MynetworkBundle/Resources/views/Mynetwork/index.html.twig
@@ -4,11 +4,9 @@
 
 {% block content %}
 
-  <p>
-    <a href="{{ path('mynetwork_search') }}" >
-      Rechercher
-    </a>
-  </p>
+  <a class="link_navigation" href="{{ path('mynetwork_search') }}" >
+    Rechercher
+  </a>
   
   {% if followeds_users %}
     <b>Utilisateurs</b>
