--- a/src/Muzich/MynetworkBundle/Resources/views/Mynetwork/search.html.twig
+++ b/src/Muzich/MynetworkBundle/Resources/views/Mynetwork/search.html.twig
@@ -4,11 +4,9 @@
 
 {% block content %}
 
-  <p>
-    <a href="{{ path('mynetwork_index') }}" >
-      Retour
-    </a>
-  </p>
+  <a class="link_navigation" href="{{ path('mynetwork_index') }}" >
+    Retour
+  </a>
   
   <b>Rechercher des utilisateurs et des groupes</b>
   
