Mise en place des liens suivre / ne plus suivre

--- a/src/Muzich/HomeBundle/Resources/views/Show/showGroup.html.twig
+++ b/src/Muzich/HomeBundle/Resources/views/Show/showGroup.html.twig
@@ -3,6 +3,16 @@
 {% block title %}{% endblock %}
 
 {% block content %}
+
+  {% if following %}
+    <a href="" class="follow_link following" >
+      Ne plus suivre
+    </a>
+  {% else %}
+    <a href="" class="follow_link notfollowing" >
+      Suivre
+    </a>
+  {% endif %}
     
   <h2>{{ group.name }}</h2>
   
