--- a/src/Muzich/HomeBundle/Resources/views/Show/showUser.html.twig
+++ b/src/Muzich/HomeBundle/Resources/views/Show/showUser.html.twig
@@ -4,6 +4,16 @@
 
 {% block content %}
     
+  {% if following %}
+    <a href="" class="follow_link following" >
+      Ne plus suivre
+    </a>
+  {% else %}
+    <a href="" class="follow_link notfollowing" >
+      Suivre
+    </a>
+  {% endif %}
+
   <h2>{{ viewed_user.name }}</h2>
   
   {% include "MuzichCoreBundle:SearchElement:default.html.twig" %}
