--- a/web/bundles/muzichhome/css/home.css
+++ b/web/bundles/muzichhome/css/home.css
@@ -1,13 +1,7 @@
-/* 
-    Document   : home
-    Created on : 10 sept. 2011, 12:49:23
-    Author     : bux
-    Description:
-        Purpose of the stylesheet follows.
-*/
 
-/* 
-   TODO customize this sample style
-   Syntax recommendation http://www.w3.org/TR/REC-CSS2/
-*/
 
+#container .follow_link
+{
+  float: right;
+  text-decoration: none;
+}
