Ajout des liens Mon compte et déconnexion.

--- a/src/Muzich/CoreBundle/Resources/views/layout.html.twig
+++ b/src/Muzich/CoreBundle/Resources/views/layout.html.twig
@@ -20,7 +20,7 @@
 </head>
 <body>
 	
-  {% include "MuzichUserBundle::connexion.html.twig" %}
+  {% include "MuzichUserBundle:Account:topBar.html.twig" %}
   
   <div id="container">
     {% block main_content %}{% endblock %}
