--- a/src/Muzich/MynetworkBundle/Resources/views/Mynetwork/index.html.twig
+++ b/src/Muzich/MynetworkBundle/Resources/views/Mynetwork/index.html.twig
@@ -10,7 +10,7 @@
   
   {% if followeds_users %}
     <b>Utilisateurs</b>
-    <ul>
+    <ul class="inline">
     {% for user in followeds_users %} 
       <li>
         <a href="{{ path('show_user', { 'slug': user.slug }) }}">{{ user.username }}</a>
@@ -21,7 +21,7 @@
   
   {% if followeds_groups %}
     <b>Groupes</b>
-    <ul>
+    <ul class="inline">
     {% for group in followeds_groups %} 
       <li>
         <a href="{{ path('show_group', { 'slug': group.slug }) }}">{{ group.name }}</a>
@@ -32,7 +32,7 @@
   
   {% if followers_users %}
     <b>Vous êtes suivis par</b>
-    <ul>
+    <ul class="inline">
     {% for user in followers_users %} 
       <li>
         <a href="{{ path('show_user', { 'slug': user.slug }) }}">{{ user.username }}</a>
