--- a/src/Muzich/CoreBundle/Resources/views/layout.html.twig
+++ b/src/Muzich/CoreBundle/Resources/views/layout.html.twig
@@ -15,10 +15,13 @@
 	<link href="{{ asset('bundles/muzichcore/css/base.css') }}" rel="stylesheet" media="screen" type="text/css" />
 	<link href="{{ asset('bundles/muzichcore/css/main.css') }}" rel="stylesheet" media="screen" type="text/css" />
   {% block css %}{% endblock %}
-	<script src="{{ asset('bundles/muzichcore/js/jquery-1.6.4.min.js') }}" type="text/javascript"></script>
+	<script src="{{ asset('js/jquery-1.6.4.min.js') }}" type="text/javascript"></script>
+	<script src="{{ asset('bundles/muzichcore/js/muzich.js') }}" type="text/javascript"></script>
   {% block js %}{% endblock %}
+  
 </head>
 <body>
+  
 	
   {% include "MuzichUserBundle:Account:topBar.html.twig" %}
   
@@ -26,6 +29,13 @@
     {% block main_content %}{% endblock %}
   </div>
   
+  
+  {% for key, flash in app.session.getFlashes() %}
+    <div class="{{ key }} message">
+      <a class="message-close" href="#" title="fermer"><img alt="close" src="{{ asset('bundles/muzichcore/img/1317386146_cancel.png') }}" /></a>
+      <h3>{{ flash }}</h3>
+    </div>
+  {% endfor %}
 </body>
 </html>
 
