--- a/src/Muzich/UserBundle/Resources/views/Registration/register.html.twig
+++ b/src/Muzich/UserBundle/Resources/views/Registration/register.html.twig
@@ -1,9 +1,23 @@
 <div class="register">
-  <form action="{{ path('fos_user_registration_register') }}" {{ form_enctype(form) }} 
+  <form action="{{ path('register') }}" {{ form_enctype(form) }} 
     method="POST" 
     class="fos_user_registration_register"
   >
+    
     {{ form_widget(form) }}
+    
+    {{ form_errors(form) }}
+
+    {{ form_row(form.username) }}
+    
+    {{ form_row(form.email) }}
+    
+    {{ form_row(form.plainPassword.first) }}
+    
+    {{ form_row(form.plainPassword.second) }}
+
+    {{ form_rest(form) }}
+    
     <div>
         <input type="submit" value="{{ 'registration.submit'|trans({}, 'FOSUserBundle') }}" />
     </div>
