Deplacement du template du formulaire tagFavorites dans un template a lui. Renomage de la méthode de mise a jour des tags.

--- a/src/Muzich/UserBundle/Resources/views/User/start.html.twig
+++ b/src/Muzich/UserBundle/Resources/views/User/start.html.twig
@@ -12,15 +12,7 @@
   
   <h3>Choisissez vos tags préférés</h3>
   
-  <form action="{{ path('update_tag_favorites') }}" method="post" {{ form_enctype(form) }}>
-    {{ form_errors(form) }}
-
-    {{ form_row(form.tags) }}
-
-    {{ form_rest(form) }}
-
-    <input type="submit" />
-  </form>
+  {% include "MuzichCoreBundle:Tag:tagFavoritesForm.html.twig" %}
   
   <p>
     Vous pourrez egallement modifier vos tags préféré dans la partie 'mon compte'.
