--- a/src/Muzich/CoreBundle/Resources/views/Tag/tagFavoritesForm.html.twig
+++ b/src/Muzich/CoreBundle/Resources/views/Tag/tagFavoritesForm.html.twig
@@ -1,4 +1,4 @@
-<form action="{{ path('update_tag_favorites') }}" method="post" {{ form_enctype(form) }}>
+<form action="{{ path('update_tag_favorites', { 'redirect' : redirect }) }}" method="post" {{ form_enctype(form) }}>
   {{ form_errors(form) }}
 
   {{ form_row(form.tags) }}
