--- a/src/Muzich/CoreBundle/Resources/views/SearchElement/default.html.twig
+++ b/src/Muzich/CoreBundle/Resources/views/SearchElement/default.html.twig
@@ -14,6 +14,12 @@
           {% endfor %} 
         </ul>
         
+        {% if element.embed %}
+          {% autoescape false %}
+            {{ element.embed }}
+          {% endautoescape %}
+        {% endif %}
+        
     </li>
   {% endfor %} 
 </ul>
