Début de procédure: Mise en marche de reset password. TOdo: Etendre les bundles (cf config).

--- a/src/Muzich/CoreBundle/Resources/views/layout.html.twig
+++ b/src/Muzich/CoreBundle/Resources/views/layout.html.twig
@@ -27,6 +27,7 @@
   
   <div id="container">
     {% block main_content %}{% endblock %}
+    {% block fos_user_content %}{% endblock %}
   </div>
   
   
