Mise en place des lien permettant de changer le laguage.

--- a/src/Muzich/CoreBundle/Resources/views/layout.html.twig
+++ b/src/Muzich/CoreBundle/Resources/views/layout.html.twig
@@ -22,7 +22,8 @@
 </head>
 <body>
   
-	
+  {% include "MuzichCoreBundle:Language:languages.html.twig" %}
+  
   {% include "MuzichUserBundle:Account:topBar.html.twig" %}
   
   <div id="container">
