--- a/src/Muzich/UserBundle/Resources/views/Account/topBar.html.twig
+++ b/src/Muzich/UserBundle/Resources/views/Account/topBar.html.twig
@@ -1,27 +1,14 @@
 
 {% if is_granted("IS_AUTHENTICATED_REMEMBERED") %}
-<div id="top_bar">
+  <div id="top_bar">
 
-  {#<ul>
-    <li>
-      <a href="{{ path('my_account') }}" >
-        Mon compte
-      </a>
-    </li>
-    <li>
-      <a href="{{ path('fos_user_security_logout') }}" >
-        Déconnexion
-      </a>
-    </li>
-  </ul>#}
-  
-  <a href="{{ path('my_account') }}" >
-    Mon compte
-  </a>
-  
-  <a href="{{ path('fos_user_security_logout') }}" >
-    Déconnexion
-  </a>
-  
-</div>
+    <a href="{{ path('my_account') }}" >
+      {{ 'top_bar.my_account'|trans({}, 'navigationui') }}
+    </a>
+
+    <a href="{{ path('fos_user_security_logout') }}" >
+      {{ 'top_bar.logout'|trans({}, 'navigationui') }}
+    </a>
+
+  </div>
 {% endif %}
