--- a/src/Muzich/CoreBundle/Resources/views/Menu/containerMenu.html.twig
+++ b/src/Muzich/CoreBundle/Resources/views/Menu/containerMenu.html.twig
@@ -2,12 +2,12 @@
 <ul id="top-tabs">
   <li {% if active == 'public' %} class="active" {% endif %}>
     <a href="{{ path('home') }}">
-      Le réseau
+      {{ 'container_menu.the_network'|trans({}, 'navigationui') }}
     </a>
   </li>
   <li {% if active == 'private' %} class="active" {% endif %}>
     <a href="{{ path('mynetwork_index') }}">
-      Mon réseau
+      {{ 'container_menu.my_network'|trans({}, 'navigationui') }}
     </a>
   </li>
 </ul>
