--- a/src/Muzich/UserBundle/Resources/views/layout.html.twig
+++ b/src/Muzich/UserBundle/Resources/views/layout.html.twig
@@ -6,7 +6,7 @@
 
 {% block main_content %}
   
-    {% include "MuzichCoreBundle:Menu:containerMenu.html.twig" with { 'active': null } %}
+    {% include "MuzichCoreBundle:Menu:containerMenu.html.twig" with { 'active': null, 'mygroups': false } %}
   
     {% block content %}{% endblock %}
   
