--- a/src/Muzich/HomeBundle/Resources/views/Show/showGroup.html.twig
+++ b/src/Muzich/HomeBundle/Resources/views/Show/showGroup.html.twig
@@ -4,13 +4,23 @@
 
 {% block content %}
 
-  <a href="{{ path('follow', { 'type': 'group', 'id': group.id, 'token': user.personalHash }) }}" class="follow_link following" >
-    {% if following %}
-      Ne plus suivre
-    {% else %}
-      Suivre
+  <span class="follow_link following">
+  
+    {% if his_group %}
+      <a href="{{ path('group_edit', { 'slug': group.slug }) }}" >
+        {{ 'group.edit'|trans({}, 'groups') }}
+      </a> |
     {% endif %}
-  </a>
+
+    <a href="{{ path('follow', { 'type': 'group', 'id': group.id, 'token': user.personalHash }) }}" >
+      {% if following %}
+        {{ 'group.notfollow'|trans({}, 'groups') }}
+      {% else %}
+        {{ 'group.follow'|trans({}, 'groups') }}
+      {% endif %}
+    </a>
+    
+  </span>
     
   <h2>{{ group.name }}</h2>
   
