--- a/src/Muzich/HomeBundle/Resources/views/Home/index.html.twig
+++ b/src/Muzich/HomeBundle/Resources/views/Home/index.html.twig
@@ -5,18 +5,13 @@
 {% block content %}
 
   <form action="{{ path('element_add') }}" method="post" {{ form_enctype(add_form) }}>
-    {{ form_errors(add_form) }}
-
-    {{ form_row(add_form.name) }}
-      
-    {{ form_row(add_form.url) }}
-      
-    {{ form_row(add_form.tags) }}
-
-    {{ form_rest(add_form) }}
+    
+    {% include "MuzichCoreBundle:Element:form.add.html.twig" with { 'form': add_form } %}
 
     <input type="submit" />
   </form>
+
+  #######
 
   {% include "MuzichCoreBundle:SearchElement:form.html.twig" %}
 
