Procédure d'ajout d'un élément en favoris.

--- a/src/Muzich/CoreBundle/Resources/views/SearchElement/default.html.twig
+++ b/src/Muzich/CoreBundle/Resources/views/SearchElement/default.html.twig
@@ -8,6 +8,14 @@
         {% endif %}
         {{ element.name }} ({{ element.owner.username }})
           <a href="{{ element.url }}" target="_blank">link</a>
+          
+          {% if element.getCountFavorite %}
+          {% else %}
+            | <a href="{{ path('favorite_add', { 'id': element.id, 'token': user.personalHash }) }}" >
+              {{ 'element.favorite.add'|trans({}, 'elements') }}
+            </a>
+          {% endif %}
+          
           <ul>
             {% for tag in element.tags %} 
               <li>
