Création de la page (virge) mes favoris.

--- a/src/Muzich/CoreBundle/Resources/views/Menu/containerMenu.html.twig
+++ b/src/Muzich/CoreBundle/Resources/views/Menu/containerMenu.html.twig
@@ -14,10 +14,22 @@
 
 {% if mygroups %}
 
-  <ul id="top-tabs-my-groups" {% if active == 'mygroups' %} class="active" {% endif %}>
-    <li {% if active == 'mygroups' %} class="active" {% endif %}>
+  <ul class="top-tabs-right {% if active == 'mygroups' %}active{% endif %}" id="top-tabs-my-groups" {% if active == 'mygroups' %} class="active" {% endif %}>
+    <li>
       <a href="{{ path('groups_own_list') }}" >
         {{ 'network.mygroups'|trans({}, 'navigationui') }}
+      </a>
+    </li>
+  </ul>
+
+{% endif %}
+
+{% if myfavorites %}
+
+  <ul class="top-tabs-right {% if active == 'myfavorites' %}active{% endif %}" id="top-tabs-my-favorites" {% if active == 'myfavorites' %} class="active" {% endif %}>
+    <li>
+      <a href="{{ path('favorites_my_list') }}" >
+        {{ 'container_menu.my_favorites'|trans({}, 'navigationui') }}
       </a>
     </li>
   </ul>
