--- a/src/Muzich/HomeBundle/Resources/views/layout.html.twig
+++ b/src/Muzich/HomeBundle/Resources/views/layout.html.twig
@@ -6,7 +6,7 @@
 
 {% block main_content %}
   
-    {% include "MuzichCoreBundle:Menu:containerMenu.html.twig" with { 'active': 'public', 'mygroups': false } %}
+    {% include "MuzichCoreBundle:Menu:containerMenu.html.twig" with { 'active': 'public', 'mygroups': false, 'myfavorites': true } %}
   
     {% block content %}{% endblock %}
   
