--- a/src/Muzich/MynetworkBundle/Resources/views/layout.html.twig
+++ b/src/Muzich/MynetworkBundle/Resources/views/layout.html.twig
@@ -6,7 +6,7 @@
 
 {% block main_content %}
   
-  {% include "MuzichCoreBundle:Menu:containerMenu.html.twig" with { 'active': 'private', 'mygroups': true } %}
+  {% include "MuzichCoreBundle:Menu:containerMenu.html.twig" with { 'active': 'private', 'mygroups': true, 'myfavorites': false } %}
   
   {% block content %}{% endblock %}
   
