--- a/web/bundles/muzichcore/css/main.css
+++ b/web/bundles/muzichcore/css/main.css
@@ -45,7 +45,7 @@
   color: #00d0de;
 }
 
-#container #top-tabs, #container #top-tabs-my-groups
+#container #top-tabs, .top-tabs-right
 {
   float: left;
   list-style: none outside none;
@@ -53,7 +53,7 @@
   padding: 0;
 }
 
-#container #top-tabs li, #container #top-tabs-my-groups
+#container #top-tabs li, .top-tabs-right
 {
   float: left;
   margin-left: 0px;
@@ -73,24 +73,24 @@
   -webkit-border-radius: 5px 5px 0px 0px;
 }
 
-#container #top-tabs li.active, #container #top-tabs-my-groups li.active
+#container #top-tabs li.active, .top-tabs-right ul.active, .top-tabs-right ul.active li
 {
   background-color: white;
 }
 
-#container #top-tabs li a, #container #top-tabs-my-groups li a
+#container #top-tabs li a, #container .top-tabs-right li a
 {
   text-decoration: none;
   color: black;
 }
 
-#container #top-tabs-my-groups
+.top-tabs-right
 {
   float: right;
   margin-right: -5px;
 }
 
-#container #top-tabs-my-groups.active
+.top-tabs-right.active
 {
   background-color: white;
 }
