(contenu) page d'affichage de ses favoris.

--- a/src/Muzich/FavoriteBundle/Resources/views/Favorite/myList.html.twig
+++ b/src/Muzich/FavoriteBundle/Resources/views/Favorite/myList.html.twig
@@ -4,6 +4,8 @@
 
 {% block content %}
 
+  <h2>{{ 'favorites.your_favorites'|trans({}, 'network') }}</h2>
 
+  {% render "MuzichCoreBundle:Search:doSearchElements" with { 'search': search_object } %}
     
 {% endblock %}
