--- a/src/Muzich/HomeBundle/Resources/views/Show/showUser.html.twig
+++ b/src/Muzich/HomeBundle/Resources/views/Show/showUser.html.twig
@@ -1,11 +1,15 @@
 {% extends "MuzichHomeBundle::layout.html.twig" %}
 
-{% block title %}{% endblock %}
+{% block title %}{{ viewed_user.name }}{% endblock %}
 
 {% block content %}
 
   <span class="follow_link following">
     
+    <a href="{{ path('favorite_user_list', {'slug' : viewed_user.slug}) }}" >
+      {{ 'user.view_favorites'|trans({}, 'users') }}
+    </a>
+    | 
     <a href="{{ path('follow', { 'type': 'user', 'id': viewed_user.id, 'token': user.personalHash }) }}" class="follow_link following" >
       {% if following %}
         {{ 'user.notfollow'|trans({}, 'users') }}
