--- a/src/Muzich/FavoriteBundle/Resources/views/Favorite/myList.html.twig
+++ b/src/Muzich/FavoriteBundle/Resources/views/Favorite/myList.html.twig
@@ -4,6 +4,12 @@
 
 {% block content %}
 
+  {% include "MuzichCoreBundle:Menu:containerMenu.html.twig" with { 
+    'active': 'myfavorites', 
+    'mygroups': false, 
+    'myfavorites': true 
+  } %}
+
   <h2>{{ 'favorites.your_favorites'|trans({}, 'network') }}</h2>
 
   {% render "MuzichCoreBundle:Search:doSearchElements" with { 'search': search_object } %}
