Utilisation du SearchElement sur les pages showUser et showGroup

--- a/src/Muzich/HomeBundle/Resources/views/Show/showGroup.html.twig
+++ b/src/Muzich/HomeBundle/Resources/views/Show/showGroup.html.twig
@@ -1,6 +1,6 @@
 {% extends "MuzichHomeBundle::layout.html.twig" %}
 
-{% block title %}{% endblock %}
+{% block title %}{{ group.name }}{% endblock %}
 
 {% block content %}
 
@@ -24,6 +24,6 @@
     
   <h2>{{ group.name }}</h2>
   
-  {% include "MuzichCoreBundle:SearchElement:default.html.twig" %}
+  {% render "MuzichCoreBundle:Search:doSearchElements" with { 'search': search_object } %}
     
 {% endblock %}
