--- a/src/Muzich/HomeBundle/Resources/views/Show/showUser.html.twig
+++ b/src/Muzich/HomeBundle/Resources/views/Show/showUser.html.twig
@@ -22,6 +22,6 @@
 
   <h2>{{ viewed_user.name }}</h2>
   
-  {% include "MuzichCoreBundle:SearchElement:default.html.twig" %}
+  {% render "MuzichCoreBundle:Search:doSearchElements" with { 'search': search_object } %}
     
 {% endblock %}
