Optimisation et refactorisation du systèmé de récupération des element de l'ElementSearch.

--- a/src/Muzich/FavoriteBundle/Resources/views/Favorite/myList.html.twig
+++ b/src/Muzich/FavoriteBundle/Resources/views/Favorite/myList.html.twig
@@ -12,6 +12,6 @@
 
   <h2>{{ 'favorites.your_favorites'|trans({}, 'network') }}</h2>
 
-  {% render "MuzichCoreBundle:Search:doSearchElements" with { 'search': search_object } %}
+  {% include "MuzichCoreBundle:SearchElement:default.html.twig" %}
     
 {% endblock %}
