--- a/src/Muzich/HomeBundle/Resources/views/Home/index.html.twig
+++ b/src/Muzich/HomeBundle/Resources/views/Home/index.html.twig
@@ -15,6 +15,6 @@
 
   {% include "MuzichCoreBundle:SearchElement:form.html.twig" %}
 
-  {% render "MuzichCoreBundle:Search:doSearchElements" with { 'search': search_object } %}
+  {% include "MuzichCoreBundle:SearchElement:default.html.twig" %}
     
 {% endblock %}
